<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Menu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/homepage_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/Theme.CovidCrackdown"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/menu"
            app:titleTextColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/hot_spot"
                android:background="@drawable/textline"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:drawableStart="@drawable/ic_hotspot"
                android:drawablePadding="14sp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/hotspot"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/faqs"
                android:background="@drawable/textline"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:drawableStart="@drawable/ic_faqs"
                android:drawablePadding="14sp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/faqs"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/stats"
                android:background="@drawable/textline"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:drawableStart="@drawable/ic_stats"
                android:drawablePadding="14sp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/stats"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/logout"
                android:background="@drawable/textline"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:drawableStart="@drawable/ic_logout"
                android:drawablePadding="14sp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/log_out"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>