<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/homepage_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/Theme.CovidCrackdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/user_profile"
            app:titleTextColor="#FFFFFF" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_account_focused"
                    android:layout_weight="0.3"/>

                <TextView
                    android:id="@+id/text_view_fragment_user_profile_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="0.7"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:background="@color/colorPrimaryVariant"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/text_view_fragment_user_profile_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="abc"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </TableRow>
<!--                TODO: make width of column fixed, the length of email is too long-->
                <TableRow
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:background="@color/colorPrimaryVariant"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/text_view_fragment_user_profile_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="abc"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </TableRow>

                <TableRow
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_number"
                        android:background="@color/colorPrimaryVariant"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/text_view_fragment_user_profile_contact_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="abc"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </TableRow>
                <TableRow
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:background="@color/colorPrimaryVariant"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/text_view_fragment_user_profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="abc"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>




</FrameLayout>